# rock_propagation

./: .gitignore  CMakeLists.txt  README.md  setup_env.sh  setup_rockprop.sh
.github/scripts/: compile_and_test.sh
include/: primaryGeneratorAction.hxx  steppingAction.hxx
src/: CMakeLists.txt  gNtpConvDUNE.cxx  primaryGeneratorAction.cxx  propagator.cxx  propagator.hxx  runPropagation.cxx  steppingAction.cxx  worldConstruction.hxx
